fixing some alignment on facts section of services page

--- a/css/index.css
+++ b/css/index.css
@@ -324,8 +324,15 @@ footer {
 
  .services-top{
    padding: 20px;
+  }
 
- }
+  .left h4{
+    padding-left: 20px;
+  }
+
+  .left ul{
+    padding-left: 20px;
+  }
 
  .main-content .middle-img{
   width: 100%;
